# commitcraft

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  release.yml
src/commitcraft/: __init__.py  cli.py  core.py
tests/: __init__.py  test_core.py
