[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commitcraft"
version = "0.1.0"
description = "A pre-commit hook to automatically add ticket info to commit messages"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "NDCoders" }
]
keywords = ["git", "commits", "pre-commit", "hooks", "commit message"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
commitcraft = "commitcraft.cli:main"

[project.urls]
Homepage = "https://github.com/ndcoders/commitcraft"
Repository = "https://github.com/ndcoders/commitcraft"
Issues = "https://github.com/ndcoders/commitcraft/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/commitcraft"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
    "mypy>=1.19.1",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
